@@ -188,6 +188,7 @@ Revision history for Perl extension Net::SSLeay.
      Fixed problems with regenerating scripts in Makefile.PL
      Added missing dependencies for SSLeay.o to Makefile.PL
      Added missing test files to svn
+     Fixed calling convention for Net::SSLeay::get_shared_ciphers + test + doc update
 
 1.45 2012-02-25
      Added mising doc for SESSION_cmp. Patch by paul.
